--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_NEWSLETTER_WEBHOOK=https://50356-4vb9a.s3.irann8n.com/webhook/db8430d4-7d39-4b3e-9550-b14aee97138e
+VITE_NEWSLETTER_WEBHOOK=https://api.nexoraaistudio.tech/contact
